[package]
name = "gcs_api"
version = "0.1.0"
authors = ["bokotomo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
actix-cors = "0.1.0"
dotenv = "0.14.1"
diesel = { version = "1.0.0", features = ["mysql"] }
r2d2-diesel = "1.0.0"
r2d2 = "0.8.5"

bytes = "0.4"
futures = "0.1"
env_logger = "*"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
json = "*"